--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>About Me</title>
+    <title>Emily Todt</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -26,7 +26,7 @@
       <p>I would love to get into designing video games, but am interested to see where this apprenticeship takes my career!</p>
       <h1>Where do you live?</h1>
       <p>Buckingham, Virginia</p>
-      <h1>Why do you want to be a web developer?</h1>
+      <h1>Why do I have 3 dogs?</h1>
       <p>The growth in this field is like no other. When it comes to how big the tech industry is becoming and how in demand software developers are, I feel like the possibilites are endless. This profession can allow me to help people from all over - whether it be companies that need their website updated or helping everyday people that need a fool-proof website to surf through.</p>
     </section>
 
